# skygen-web

./: .env.example  .gitignore  DEV_MODE.md  GEMINI_SETUP.md  PLAN_EXAMPLE.md  PLAN_TEST.md  PLAN_TOOL_PROMPT.md  README-DISTRIBUTION.md  README-TAURI.md  README.md  build-universal.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  run_agent.sh  start_desktop_agent.sh  tailwind.config.ts  tsconfig.tsbuildinfo
backend/: DESKTOP_ENV_SETUP.md  E2E_TESTING.md  README_DESKTOP.md  simple_desktop_agent.py
backend/backend/: .dockerignore  docker-compose.yml  pyproject.toml
backend/backend/app/: analytics.py  config.py  deps.py  main.py  models.py  routing.py  scheduler.py  security.py
backend/backend/app/routers/: agent.py  approvals.py  artifacts.py  auth.py  chat.py  debug.py  files.py  me.py  notifications.py  scheduled_tasks.py  screenshots.py  webhooks.py  ws.py
backend/backend/docs/: ARCHITECTURE.md  THREAT_MODEL.md
backend/backend/docs/api/: analytics.md  chat.md  debug.md  devices.md  me.md  scheduled_tasks.md  tasks.md  templates.md  webhooks.md  ws.md
backend/backend/docs/ops/: broker.md
backend/backend/migrations/: add_chat_tables.sql
backend/backend/tests/: requirements-test.txt  test_admin_comprehensive.py  test_analytics_comprehensive.py  test_approvals_comprehensive.py  test_artifacts_comprehensive.py  test_error_cases_comprehensive.py  test_health_metrics_comprehensive.py  test_kafka_integration.py  test_tasks_comprehensive.py  test_templates_comprehensive.py
backend/coact_client/: cli.py  gui_main.py  pyproject.toml
backend/coact_client/config/: settings.py
backend/coact_client/core/: auth.py  device.py  tasks.py  websocket.py
backend/coact_client/modules/: __init__.py  embedded_desktop_env.py  screen.py
backend/desktop_env/: __init__.py  requirements.txt
backend/desktop_env/controllers/: python.py  setup.py
piska/: CHAT_INTEGRATION_README.md  DESKTOP_ENV_INTEGRATION.md  DESKTOP_TASKS_GUIDE.md  PROJECT_OVERVIEW.md  requirements.txt
piska/backend/: Dockerfile  docker-compose.yml  mkdocs.yml
piska/backend/app/: ai_safety.py  audit.py  clients.py  conn.py  db.py  device_health.py  metrics.py  schemas.py  worker.py
piska/backend/docs/: SECURITY.md  index.md
piska/backend/tests/: pytest.ini  test_auth_comprehensive.py  test_broker_e2e.py  test_debug_comprehensive.py  test_devices_comprehensive.py  test_integration_comprehensive.py  test_live_api.py  test_live_full.py  test_live_ws.py  test_me_comprehensive.py  test_notifications_comprehensive.py  test_scheduled_tasks_comprehensive.py  test_webhooks_comprehensive.py  test_websocket_comprehensive.py
piska/coact_client/: .env.example  GUI_GUIDE.md  README.md  __init__.py  app.py  example_usage.py  requirements.txt
piska/coact_client/gui/: login_dialog.py  main_window.py  system_tray.py
piska/coact_client/modules/: artifacts.py  desktop_env.py  shell.py
piska/coact_client/utils/: logging.py
piska/desktop_env/: desktop_env_vm.py
piska/desktop_env/controllers/: actions.py
piska/desktop_env/embedded/: __init__.py  action_runner.py  env.py  os_adapter.py
public/images/: systemEvents-demo.avif
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/allow/: page.tsx
src/app/allownew/: page.tsx
src/app/app/: page.tsx
src/app/chat/: page.tsx
src/components/: AnimatedMarkdown.tsx  AnimatedMessage.tsx  ChatMessage.tsx  Dock.css  Dock.tsx  FullscreenHandler.tsx  GlassSurface.css  GlassSurface.tsx  LightRays.css  LightRays.tsx  LoginModal.tsx  LogoLoop.css  LogoLoop.tsx  MarkdownRenderer.tsx  Plan.tsx  ShinyText.module.css  ShinyText.tsx  Silk.tsx  SkygenAuth.tsx  SpinnerIcon.tsx  Squares.css  Squares.tsx  TextType.tsx  ThemeToggle.tsx  ToolRenderer.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useChat.ts
src/lib/: swift-bridge.ts
src/services/: authService.mock.ts  authService.ts  chatService.mock.ts  chatService.ts  desktopEnvService.ts  geminiService.ts  skygenService.ts  websocketService.ts
src/styles/: markdown.css
src/types/: chat.ts
src/utils/: toolParser.ts
(+46 files in other folders)
