[package]
name = "skygen-web"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
image = "0.24"
screenshots = "0.8"
